<?xml version="1.0"?>
<package>
  <name>hydrone</name>
  <version>0.0.0</version>
  <description>The HyDrone tools package</description>

  <maintainer email="rafael@furg.br">Rafael Teixeira</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="rafael@furg.br">Rafael Teixeira</author>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
